# wallet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.rusk.yml  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vite.extension-workers.js  vite.firefox.config.js  vite.local-w3sper.js  vite.tauri.config.js  vitest.config.js
.github/workflows/: ci.yml  release.yml
.storybook/: main.js  preview.js
apps/tauri/: README.md
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
config/: manifest.firefox.json
docs/: AGENTS.md  ARCHITECTURE.md  PRIVACY.md  ROADMAP.md  SECURITY.md  SUPPLY_CHAIN_REVIEW_v0.1.md  provider-api.md
docs/investigations/: phoenix-tx-lifecycle.md  sozu-liquid-staking.md
public/: engine.html  exu-sandbox-worker.js  full.html  index.html  manifest.json  notification.html  offscreen.html  options.html  popup.html  ui.css  wallet_core-1.7.1.wasm
public/drivers/: drc20_data_driver.wasm  drc721_data_driver.wasm  sozu_hub_data_driver.wasm  sozu_pool_data_driver.wasm  sozu_staked_dusk_data_driver.wasm  stake_data_driver.wasm
scripts/: e2e-with-rusk.js  generate-icons.js  generate-shells.js  wait-rusk.js
src/: background.js  build.worker-config.test.js  contentScript.js  contentScript.test.js  engine.js  inpage.js  notification.js  offscreen.js  popup.js
src/background/: autoLock.test.js  dappEvents.js  dappEvents.test.js  engineHost.js  enginePage.js  index.js  lifecycle.conformance.test.js  (+9 more)
(+127 files in other folders)
