[package]
name = "mochavi-wallet-tauri"
version = "0.1.0"
description = "Mochavi Wallet"
authors = ["Mochavi"]
edition = "2021"

[lib]
name = "mochavi_wallet_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Official Tauri plugins
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-stronghold = "2"

[features]
# This feature is used for production builds where the `custom-protocol` is used.
# It is added by default by the Tauri bundler.
custom-protocol = ["tauri/custom-protocol"]
